Update demo for Pixi mode

--- a/psychophysics-demos/change_attributes.html
+++ b/psychophysics-demos/change_attributes.html
@@ -4,6 +4,7 @@
     <script src="../jspsych-dist/dist/jspsych.js"></script>
     <script src="../jspsych-dist/dist/plugin-html-button-response.js"></script>
     <script src="../jspsych-psychophysics.js"></script>
+    <script src="https://pixijs.download/release/pixi.js"></script>
     <link rel="stylesheet" href="../jspsych-dist/dist/jspsych.css"></link>
 </head>
 <body></body>
@@ -13,7 +14,9 @@
             jsPsych.data.displayData();
         }
     })
-    console.log(`jsPsych Version ${exp.version()}`)
+    console.log(`jsPsych Version ${jsPsych.version()}`)
+
+    const pixi_flag = jsPsych.data.getURLVariable('pixi_flag') === '1' ? true : false;
 
     const instruction = {
         type: jsPsychHtmlButtonResponse,
@@ -33,7 +36,12 @@
       font: "22px 'Arial'",
       text_color: 'white',
       change_attr: function(stim){ // Change the content dynamically
-          stim.content = `RGB = [${color}, ${color}, ${color}]`
+            const content = `RGB = [${color}, ${color}, ${color}]`;
+            if (pixi_flag) { // Using PixiJS
+                stim.pixi_obj.text = content
+            } else {
+                stim.content = content
+            }
       } 
     }
 
@@ -46,17 +54,28 @@
         height: 100,
         line_color: 'rgb(0,0,0)',
         fill_color: 'rgb(0,0,0)',
+        line_width: 4,
         change_attr: function(stim, times, frames){ // called by the requestAnimationFrame
             const frequency = 0.05;
             const sin_value = Math.sin(2 * Math.PI * frequency * times/1000) // The times are in terms of milliseconds
             const normalized_value = sin_value/2 + 1/2; // from 0 to 1
             color = Math.floor(normalized_value * 255) // An integer between 0 and 255
-            stim.fill_color = `rgb(${color}, ${color}, ${color})`
+            const color_info = `rgb(${color}, ${color}, ${color})`
+
+            if (pixi_flag) { // Using PixiJS
+                const color_num = jsPsych.getCurrentTrial().getColorNum(color_info)
+                stim.pixi_obj.beginFill(color_num, 1);
+                stim.pixi_obj.drawRect(-stim.width/2, -stim.height/2, stim.width, stim.height);
+                stim.pixi_obj.endFill();
+            } else {
+                stim.fill_color = color_info
+            }
         }
     }
 
     const trial = {
         type: jsPsychPsychophysics,
+        pixi: pixi_flag,
         stimuli: [text_object, rect_object],
         choices: ['y', 'n'], // The participant can respond to the stimuli using the 'y' or 'n' key.
         canvas_width: 600,
