--- a/psychophysics-demos/mouse_drawing.html
+++ b/psychophysics-demos/mouse_drawing.html
@@ -13,6 +13,8 @@
       // This demo is like a drawing application.
       // Note that the clear_canvas property is set to false.
 
+      // If you are using pixi mode, https://pixijs.io/examples/#/demos-advanced/mouse-trail.js might be useful. 
+
       const jsPsych = initJsPsych({
         on_finish: function() {
             jsPsych.data.displayData();
