--- a/psychophysics-demos/draw-gabor-patches.html
+++ b/psychophysics-demos/draw-gabor-patches.html
@@ -4,6 +4,7 @@
     <script src="../jspsych-dist/dist/jspsych.js"></script>
     <script src="../jspsych-dist/dist/plugin-html-button-response.js"></script>
     <script src="../jspsych-psychophysics.js"></script>
+    <script src="https://pixijs.download/release/pixi.js"></script>
     <script src="../js/numeric.min.js"></script>
     <link rel="stylesheet" href="../jspsych-dist/dist/jspsych.css"></link>
   </head>
@@ -16,6 +17,8 @@
             jsPsych.data.displayData();
         }
     })
+
+    const pixi_flag = jsPsych.data.getURLVariable('pixi_flag') === '1' ? true : false;
 
     const instruction = {
         type: jsPsychHtmlButtonResponse,
@@ -79,6 +82,7 @@
 
     const trial = {
         type: jsPsychPsychophysics,
+        pixi: pixi_flag,
         stimuli: [gabor1, gabor2, gabor3, gabor4],
         canvas_height: 700,
         prompt: 'Press any key to proceed.',
