--- a/psychophysics-demos/response_start_time_depends_on_onsets.html
+++ b/psychophysics-demos/response_start_time_depends_on_onsets.html
@@ -5,9 +5,10 @@
     <script src="../jspsych-dist/dist/plugin-html-button-response.js"></script>
     <script src="../jspsych-dist/dist/plugin-preload.js"></script>
     <script src="../jspsych-psychophysics.js"></script>
+    <script src="https://pixijs.download/release/pixi.js"></script>
     <link rel="stylesheet" href="../jspsych-dist/dist/jspsych.css"></link>
 </head>
-<body></body>
+<body bgcolor="gray"></body>
 <script>
     // This demo explains how to set a different time to start presenting images for each trial, 
     // and how to get the reaction time based on that time.
@@ -21,6 +22,8 @@
         }
     })
     console.log(`jsPsych Version ${jsPsych.version()}`)
+
+    const pixi_flag = jsPsych.data.getURLVariable('pixi_flag') === '1' ? true : false;
 
     const instruction = {
         type: jsPsychHtmlButtonResponse,
@@ -45,6 +48,7 @@
         timeline: [
             {
                 type: jsPsychPsychophysics,
+                pixi: pixi_flag,
                 response_start_time: jsPsych.timelineVariable('start_time'),
                 stimuli: [
                     {
