--- a/psychophysics-demos/texts.html
+++ b/psychophysics-demos/texts.html
@@ -4,6 +4,7 @@
     <script src="../jspsych-dist/dist/jspsych.js"></script>
     <script src="../jspsych-dist/dist/plugin-html-button-response.js"></script>
     <script src="../jspsych-psychophysics.js"></script>
+    <script src="https://pixijs.download/release/pixi.js"></script>
     <link rel="stylesheet" href="../jspsych-dist/dist/jspsych.css"></link>
 </head>
 <body></body>
@@ -16,6 +17,8 @@
         }
     })
     console.log(`jsPsych Version ${jsPsych.version()}`)
+
+    const pixi_flag = jsPsych.data.getURLVariable('pixi_flag') === '1' ? true : false;
 
     const instruction = {
         type: jsPsychHtmlButtonResponse,
@@ -45,7 +48,7 @@
         content: 'If the sentence is very long,\nyou can start a new line in this way.',
         font: "22px 'Arial'",
         text_color: 'Yellow',
-        text_space: 50,
+        // text_space: 50,
         motion_start_time: 1500,
         motion_end_time: 3000,
         vert_pix_frame: -2,
@@ -53,6 +56,7 @@
 
     const trial = {
         type: jsPsychPsychophysics,
+        pixi: pixi_flag,
         stimuli: [text_object1, text_object2],
     }
 
