--- a/jspsych-dist/examples/data-from-url.html
+++ b/jspsych-dist/examples/data-from-url.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="../dist/jspsych.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <link rel="stylesheet" href="../dist/jspsych.css">
   </head>
   <body>
     <p>The URL variables should be logged to the console</p>
