--- a/jspsych-dist/examples/jspsych-browser-check.html
+++ b/jspsych-dist/examples/jspsych-browser-check.html
@@ -4,7 +4,7 @@
     <script src="../dist/jspsych.js"></script>
     <script src="../dist/plugin-browser-check.js"></script>
     <script src="../dist/plugin-html-button-response.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <link rel="stylesheet" href="../dist/jspsych.css">
     <style>
       img {
         width: 300px;
