--- a/jspsych-dist/examples/jspsych-html-keyboard-response.html
+++ b/jspsych-dist/examples/jspsych-html-keyboard-response.html
@@ -3,7 +3,7 @@
 <head>
   <script src="../dist/jspsych.js"></script>
   <script src="../dist/plugin-html-keyboard-response.js"></script>
-  <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+  <link rel="stylesheet" href="../dist/jspsych.css">
 </head>
 <body></body>
 <script>
