--- a/jspsych-dist/examples/jspsych-image-button-response.html
+++ b/jspsych-dist/examples/jspsych-image-button-response.html
@@ -4,7 +4,7 @@
     <script src="../dist/jspsych.js"></script>
     <script src="../dist/plugin-image-button-response.js"></script>
     <script src="../dist/plugin-preload.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <link rel="stylesheet" href="../dist/jspsych.css">
   </head>
   <body></body>
   <script>
