--- a/jspsych-dist/examples/jspsych-preload.html
+++ b/jspsych-dist/examples/jspsych-preload.html
@@ -6,7 +6,7 @@
     <script src="../dist/plugin-html-button-response.js"></script>
     <script src="../dist/plugin-image-button-response.js"></script>
     <script src="../dist/plugin-audio-button-response.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <link rel="stylesheet" href="../dist/jspsych.css">
   </head>
   <body></body>
   <script>
