--- a/jspsych-dist/examples/jspsych-survey-html-form.html
+++ b/jspsych-dist/examples/jspsych-survey-html-form.html
@@ -3,7 +3,7 @@
   <head>
     <script src="../dist/jspsych.js"></script>
     <script src="../dist/plugin-survey-html-form.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css"></script>
+    <link rel="stylesheet" href="../dist/jspsych.css"></script>
   </head>
   <body></body>
   <script type="text/javascript">
