--- a/jspsych-dist/examples/jspsych-survey-multi-select.html
+++ b/jspsych-dist/examples/jspsych-survey-multi-select.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src="../packages/jspsych/dist/index.browser.js" ></script>
-    <script src="../packages/plugin-survey-multi-select/dist/index.browser.js" ></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <script src="../dist/jspsych.js" ></script>
+    <script src="../dist/plugin-survey-multi-select.js" ></script>
+    <link rel="stylesheet" href="../dist/jspsych.css">
   </head>
   <body></body>
   <script>   
