--- a/jspsych-dist/examples/display-element-to-embed-experiment.html
+++ b/jspsych-dist/examples/display-element-to-embed-experiment.html
@@ -5,7 +5,7 @@
     <script src="../dist/plugin-image-keyboard-response.js"></script>
     <script src="../dist/plugin-html-keyboard-response.js"></script>
     <script src="../dist/plugin-preload.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <link rel="stylesheet" href="../dist/jspsych.css">
     <style>
       p { line-height: 1.5em; font-size: 18px; }
       #jspsych-experiment { width: 600px; height: 400px; float: right; margin: 25px; border: 1px solid #999;}
