--- a/jspsych-dist/examples/jspsych-categorize-image.html
+++ b/jspsych-dist/examples/jspsych-categorize-image.html
@@ -4,7 +4,7 @@
     <script src="../dist/jspsych.js"></script>
     <script src="../dist/plugin-categorize-image.js"></script>
     <script src="../dist/plugin-preload.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <link rel="stylesheet" href="../dist/jspsych.css">
     <style>
       img {
         width: 300px;
