--- a/jspsych-dist/examples/jspsych-extension-mouse-tracking.html
+++ b/jspsych-dist/examples/jspsych-extension-mouse-tracking.html
@@ -4,7 +4,7 @@
   <script src="../dist/jspsych.js"></script>
   <script src="../dist/plugin-html-button-response.js"></script>
   <script src="../dist/extension-mouse-tracking.js"></script>
-  <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+  <link rel="stylesheet" href="../dist/jspsych.css">
   <style>
     .jspsych-btn {margin-bottom: 10px;}
   </style>
