--- a/jspsych-dist/examples/jspsych-fullscreen.html
+++ b/jspsych-dist/examples/jspsych-fullscreen.html
@@ -5,7 +5,7 @@
     <script src="../dist/plugin-fullscreen.js"></script>
     <script src="../dist/plugin-image-keyboard-response.js"></script>
     <script src="../dist/plugin-preload.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <link rel="stylesheet" href="../dist/jspsych.css">
   </head>
   <body></body>
   <script>
