--- a/jspsych-dist/examples/jspsych-initialize-microphone.html
+++ b/jspsych-dist/examples/jspsych-initialize-microphone.html
@@ -4,7 +4,7 @@
   <script src="../dist/jspsych.js"></script>
   <script src="../dist/plugin-initialize-microphone.js"></script>
   <script src="../dist/plugin-html-audio-response.js"></script>
-  <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+  <link rel="stylesheet" href="../dist/jspsych.css">
 </head>
 <body></body>
 <script>
