--- a/jspsych-dist/examples/jspsych-virtual-chinrest.html
+++ b/jspsych-dist/examples/jspsych-virtual-chinrest.html
@@ -7,7 +7,7 @@
     <script src="../dist/jspsych.js"></script>
     <script src="../dist/plugin-virtual-chinrest.js"></script>
     <script src="../dist/plugin-html-keyboard-response.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css"></link>
+    <link rel="stylesheet" href="../dist/jspsych.css"></link>
   </head>
   <script>
 
@@ -25,7 +25,8 @@
       type: jsPsychVirtualChinrest,
       blindspot_reps: 2, 
       resize_units: "cm",
-      pixels_per_unit: 50
+      pixels_per_unit: 50,
+      item_path: 'img/card.png',
     };
 
     // one blindspot estimate
@@ -45,7 +46,7 @@
     // note: pixels_per_unit will be ignored
     let no_resize = {
       type: jsPsychVirtualChinrest,
-      blindspot_reps: 1,
+      blindspot_reps: 3,
       resize_units: "none",
       pixels_per_unit: 50 
     };
@@ -65,7 +66,7 @@
       prompt: '<p>The stimulus above should be 4cm x 4cm if resizing worked properly.</p>'
     };
 
-    jsPsych.run([no_resize, validation_trial]); // deg_resize, no_resize, error_trial
+    jsPsych.run([cm_resize, validation_trial]); // deg_resize, no_resize, error_trial
 
   </script>
 </html>
