--- a/jspsych-dist/examples/jspsych-visual-search-circle.html
+++ b/jspsych-dist/examples/jspsych-visual-search-circle.html
@@ -6,7 +6,7 @@
     <script src="../dist/plugin-html-keyboard-response.js"></script>
     <script src="../dist/plugin-visual-search-circle.js"></script>
     <script src="../dist/plugin-preload.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <link rel="stylesheet" href="../dist/jspsych.css">
   </head>
   <body></body>
   <script>
