--- a/jspsych-dist/examples/jspsych-vsl-animate-occlusion.html
+++ b/jspsych-dist/examples/jspsych-vsl-animate-occlusion.html
@@ -5,7 +5,7 @@
     <script src="../dist/jspsych.js"></script>
     <script src="../dist/plugin-vsl-animate-occlusion.js"></script>
     <script src="../dist/plugin-preload.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <link rel="stylesheet" href="../dist/jspsych.css">
   </head>
   <body></body>
   <script>
