--- a/jspsych-dist/examples/lexical-decision.html
+++ b/jspsych-dist/examples/lexical-decision.html
@@ -4,7 +4,7 @@
     <script src="../dist/jspsych.js"></script>
     <script src="../dist/plugin-html-keyboard-response.js"></script>
     <script src="../dist/plugin-html-button-response.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <link rel="stylesheet" href="../dist/jspsych.css">
     <style>
       .stimulus { font-size: 32px; }
     </style>
