--- a/jspsych-dist/examples/webgazer_audio.html
+++ b/jspsych-dist/examples/webgazer_audio.html
@@ -10,7 +10,7 @@
     <script src="../dist/plugin-webgazer-validate.js"></script>
     <script src="js/webgazer/webgazer.js"></script>
     <script src="../dist/extension-webgazer.js"></script>
-    <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+    <link rel="stylesheet" href="../dist/jspsych.css">
     <style>
       .jspsych-content { max-width: 100%; }
     </style>
