Specify the line_width property

--- a/psychophysics-demos/lines.html
+++ b/psychophysics-demos/lines.html
@@ -36,6 +36,7 @@
         startY: 400,
         angle: 45,
         line_length: 200,
+        line_width: 4,
         line_color: 'black', // You can use the HTML color name instead of the HEX color.
         show_start_time: 500, // ms after the start of the trial
         endX: 300,
@@ -50,7 +51,8 @@
         x1: 300,
         y1: 200,
         x2: 200,
-        y2: 400,        
+        y2: 400,
+        line_width: 6,
         line_color: 'red', // You can use the HTML color name instead of the HEX color.
         show_start_time: 1000, // ms after the start of the trial
         vert_pix_frame: 5,
