Update the doc regarding the demos

--- a/psychophysics-demos/remain_canvas.html
+++ b/psychophysics-demos/remain_canvas.html
@@ -9,7 +9,7 @@
 </head>
 <body></body>
 <script>
-    // This file demonstrates how to remain the main canvas even after the trials finishes.
+    // This file demonstrates how to remain the main canvas even after the trial finishes.
     // This method will be useful when there is a flash between trials.
     
     const jsPsych = initJsPsych({
