Add preloading sound files

--- a/psychophysics-demos/visual_stimuls_terminates_earlier_than_audio.html
+++ b/psychophysics-demos/visual_stimuls_terminates_earlier_than_audio.html
@@ -98,7 +98,7 @@
       }
 
     console.log(`jsPsych Version ${jsPsych.version()}`)
-    jsPsych.run([main_trials])
+    jsPsych.run([preload, main_trials])
 
 </script>
 </html>
