Fix the link to PixiJS library.

--- a/psychophysics-demos/change_image_size_by_keypress.html
+++ b/psychophysics-demos/change_image_size_by_keypress.html
@@ -4,7 +4,7 @@
       <script src="../jspsych-dist/dist/jspsych.js"></script>
       <script src="../jspsych-dist/dist/plugin-html-button-response.js"></script>
       <script src="../jspsych-dist/dist/plugin-preload.js"></script>
-      <script src="https://pixijs.download/release/pixi.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.8/browser/pixi.min.js"></script>
       <script src="../jspsych-psychophysics.js"></script>
       <link rel="stylesheet" href="../jspsych-dist/dist/jspsych.css"></link>
     </head>
