--- a/psychophysics-demos/combination_with_survey_plugins.html
+++ b/psychophysics-demos/combination_with_survey_plugins.html
@@ -6,7 +6,7 @@
     <script src="../jspsych-dist/dist/plugin-preload.js"></script>
     <script src="../jspsych-dist/dist/plugin-survey-text.js"></script>
     <script src="../jspsych-dist/dist/plugin-survey-likert.js"></script>
-    <script src="https://pixijs.download/release/pixi.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.8/browser/pixi.min.js"></script>
     <script src="../jspsych-psychophysics.js"></script>
     <link rel="stylesheet" href="../jspsych-dist/dist/jspsych.css"></link>
 </head>
